//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accounts Account [not null]
  sessions Session [not null]
  campaignsCreated campaigns [not null]
  members members [not null]
  uploads uploads [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table campaigns {
  id String [pk]
  name String [not null]
  description String
  systemPrompt String
  createdBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  creator User [not null]
  members members [not null]
  gamingSessions gaming_sessions [not null]
  inviteLinks invite_links [not null]
  invitations invitations [not null]

  indexes {
    (createdBy, name) [unique]
  }
}

Table gaming_sessions {
  id String [pk]
  campaignId String [not null]
  title String [not null]
  sessionDate DateTime [not null]
  uploadId String
  audioFilePath String
  duration Int
  status String [not null, default: 'draft']
  errorStep String
  errorMessage String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  campaign campaigns [not null]
  upload uploads
  summary summaries
  transcriptions transcriptions [not null]
}

Table transcriptions {
  id Int [pk, increment]
  sessionId String [not null]
  startTime Float [not null]
  endTime Float [not null]
  text String [not null]
  confidence Float
  createdAt DateTime [default: `now()`, not null]
  session gaming_sessions [not null]
}

Table summaries {
  id Int [pk, increment]
  sessionId String [unique, not null]
  summaryText String [not null]
  keyEvents String
  charactersInvolved String
  isEdited Boolean [not null, default: false]
  editedAt DateTime
  originalText String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  session gaming_sessions [not null]
}

Table uploads {
  id String [pk]
  userId String [not null]
  filename String [not null]
  originalName String [not null]
  path String [not null]
  size Int [not null]
  mimetype String [not null]
  duration Int
  status String [not null, default: 'uploaded']
  chunkPaths String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  gamingSessions gaming_sessions [not null]
}

Table members {
  id String [pk]
  campaignId String [not null]
  userId String [not null]
  role String [not null]
  invitedBy String
  joinedAt DateTime [default: `now()`, not null]
  campaign campaigns [not null]
  user User [not null]

  indexes {
    (campaignId, userId) [unique]
  }
}

Table invite_links {
  id String [pk]
  campaignId String [not null]
  tokenHash String [unique, not null]
  createdBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime
  revokedAt DateTime
  campaign campaigns [not null]
}

Table invitations {
  id String [pk]
  campaignId String [not null]
  email String [not null]
  invitedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  acceptedAt DateTime
  campaign campaigns [not null]

  indexes {
    (campaignId, email) [unique]
  }
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: campaigns.createdBy > User.id [delete: Restrict]

Ref: gaming_sessions.campaignId > campaigns.id [delete: Cascade]

Ref: gaming_sessions.uploadId > uploads.id [delete: Set Null]

Ref: transcriptions.sessionId > gaming_sessions.id [delete: Cascade]

Ref: summaries.sessionId - gaming_sessions.id [delete: Cascade]

Ref: uploads.userId > User.id [delete: Cascade]

Ref: members.campaignId > campaigns.id [delete: Cascade]

Ref: members.userId > User.id [delete: Cascade]

Ref: invite_links.campaignId > campaigns.id [delete: Cascade]

Ref: invitations.campaignId > campaigns.id [delete: Cascade]